--- a/Savings/foundry.toml
+++ b/Savings/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+gas_reports = ["ChainCoopSaving", "ChainCoopManagement", "YieldErc20_BreadToken"]
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
