--- a/Savings/foundry.toml
+++ b/Savings/foundry.toml
@@ -3,6 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 gas_reports = ["ChainCoopSaving", "ChainCoopManagement", "YieldErc20_BreadToken"]
+[rpc_endpoints]
+lisk = "${LISK_RPC_URL}"
 
 
 
