--- a/Savings/.gitmodules
+++ b/Savings/.gitmodules
@@ -1,3 +1,22 @@
-[submodule "lib/forge-std"]
-	path = lib/forge-std
-	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/aave-v3-origin"]
+	path = lib/aave-v3-origin
+	url = https://github.com/aave-dao/aave-v3-origin
+[submodule "lib/openzeppelin-foundry-upgrades"]
+	path = lib/openzeppelin-foundry-upgrades
+	url = https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "Savings/lib/openzeppelin-foundry-upgrades"]
+	path = Savings/lib/openzeppelin-foundry-upgrades
+	url = https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades
+[submodule "Savings/lib/openzeppelin-contracts-upgradeable"]
+	path = Savings/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "Savings/lib/aave-v3-origin"]
+	path = Savings/lib/aave-v3-origin
+	url = https://github.com/aave-dao/aave-v3-origin
+[submodule "Savings/lib/openzeppelin-contracts"]
+	path = Savings/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+
